# worca-cc

./: .coveragerc  .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  MIGRATION.md  README.md  ROADMAP.md  package-lock.json  package.json  pyproject.toml  vitest.config.js
.claude/: settings.json
.husky/: pre-commit
coverage/: README.md
docs/: architecture-review-2026-06.md  claude-md-mode.md  cli-reference.md  configuration-precedence.md  dashboard.md  design-principles.md  effort.md  events.md  fleet-runs.md  governance.md  how-it-works.md  instruction-flow.md  platform-support.md  state-action-matrix.md  workspace-runs.md
docs-site/: README.md  astro.config.mjs  package-lock.json  package.json  wrangler.jsonc
scripts/: check-help-links-live.py  coverage.py  pr_stage_harness.py
src/: placeholder.py
tests/: conftest.py  test_agent_md_refs.py  test_agent_pid.py  test_ast_cache.py  test_audit_fixes_121_122.py  test_bd_create_hook.py  test_beads.py  test_block_files.py  test_branch_naming.py  test_builtin_templates.py  test_bundle.py  test_claude_cli.py  test_claude_cli_logging.py  test_claude_cli_registry.py  test_claude_md_overlay.py  test_cli_cleanup.py  test_cli_init.py  test_cli_integrations_status.py  test_cli_main.py  test_cli_models.py  test_cli_pr.py  test_cli_run_pipeline.py  test_cli_templates.py  test_cli_version.py  test_control.py  test_control_webhook_handling.py  test_coordinate_schema.py  test_coordinator_agent.py  test_coordinator_max_beads.py  test_coverage_script.py  test_crg_cli.py  test_crg_detect.py  test_crg_mcp_config.py  test_crg_preflight.py  (+187 more)
(+1035 files in other folders)
