[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "worca-cc"
version = "0.8.1rc1"
description = "Autonomous software development pipeline combining orchestration with governance enforcement"
readme = "src/worca/README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [{name = "Sinisha Djukic"}, {name = "Ivan Dachev"}]
keywords = ["autonomous-coding", "ai-agents", "multi-agent", "pipeline", "governance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Environment :: Console",
    "Topic :: Software Development",
]

[project.urls]
Homepage = "https://github.com/SinishaDjukic/worca-cc"
Repository = "https://github.com/SinishaDjukic/worca-cc.git"
Issues = "https://github.com/SinishaDjukic/worca-cc/issues"

[project.scripts]
worca = "worca.cli.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-timeout>=2.0",
    "ruff>=0.1.0",
    "jsonschema>=4.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
worca = [
    "claude_hooks/*.py",
    "scripts/*.py",
    "agents/core/*.md",
    "schemas/*.json",
    "settings.json",
    "templates/*/template.json",
    "templates/*/agents/*.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q --tb=short --no-header"
timeout = 30

[tool.ruff]
target-version = "py38"
line-length = 100
